# VUT_FIT_BP

./: README.md
documentation/: Makefile  fitthesis.cls  xhanak33_water_level_monitoring-01-kapitoly-chapters.tex  xhanak33_water_level_monitoring-20-literatura-bibliography.bib  xhanak33_water_level_monitoring-30-prilohy-appendices.tex  xhanak33_water_level_monitoring.tex
documentation/obrazky-figures/graphs/: main.py
examples/: example_config_file  example_server.py
examples/templates/: wlm.html
firmware/: CMakeLists.txt  Makefile  STM32F030CCTx_FLASH.ld  water_distance_measurement.ioc  water_distance_measurement.txt
firmware/Inc/: embd_sys_configuration.h  embd_sys_esp8266.h  embd_sys_gpio.h  embd_sys_i2c.h  embd_sys_inc.h  embd_sys_jsn-sr04t2.h  embd_sys_lidar.h  embd_sys_mcp9808.h  embd_sys_uart.h  embd_sys_utils.h  embd_sys_vector.h  main.h  stm32f0xx_it.h  water_level_monitoring.h
firmware/Src/: embd_sys_configuration.c  embd_sys_esp8266.c  embd_sys_gpio.c  embd_sys_i2c.c  embd_sys_jsn-sr04t2.c  embd_sys_lidar.c  embd_sys_mcp9808.c  embd_sys_uart.c  embd_sys_utils.c  embd_sys_vector.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  water_level_monitoring.c
hardware/main_board/: main_board.kicad_pcb  main_board.pro  main_board.sch
hardware/main_board/gerber/: main_board-B.Cu.gbr  main_board-B.Mask.gbr  main_board-Edge.Cuts.gbr  main_board-F.Cu.gbr  main_board-F.Mask.gbr  main_board-F.SilkS.gbr  main_board-PTH.drl
hardware/support_board/: support_board.kicad_pcb  support_board.pro  support_board.sch
(+7 files in other folders)
